--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,9 @@
-name: Build and Release Resume PDF
+name: Build
 
-on: [push]
+on:
+  push:
+    branches:
+      - "**"
 
 concurrency:
   group: ${{ github.ref }}
