--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,4 +19,4 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Compile LaTeX document
-        run: xelatex -pdf -f -interaction=nonstopmode -outdir=build -jobname=gabriele_bocchi_resume resume.tex
+        run: make
