--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,3 +20,9 @@ jobs:
 
       - name: Compile LaTeX document
         run: make
+
+      - name: Create artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: Resume
+          path: gabriele_bocchi_resume.pdf
