feat: improve Renovate configuration

--- a/renovate.json
+++ b/renovate.json
@@ -1,10 +1,10 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
-    ":automergeStableNonMajor",
     "config:recommended",
     "group:allNonMajor",
     "group:recommended",
-    "security:openssf-scorecard"
+    "security:openssf-scorecard",
+    ":disableDependencyDashboard"
   ]
 }
